<resources>
    <string name="app_name">SAVEntry</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="channel_id">SAVEntry Logger</string>
    <string name="channel_name">SAVEntry Logger Notifications</string>
    <string name="channel_description">Notification channel for notifying of active check ins.</string>

    <string name="scan_shortcut_short">Scan QR</string>
    <string name="scan_shortcut_long">Check-in using SafeEntry QR code</string>
    <string name="scan_shortcut_disabled">Unable to scan QR Code</string>

    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 0.75s</string>

    <!-- Strings for prompts -->
    <string name="prompt_point_at_a_barcode">Point your camera at a SafeEntry QR Code</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Processing&#8230;</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="product_search_button">Search object</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_choose_location_for_widget">ChooseLocationForWidget</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_tile">Settings Tile</string>
    <string name="settings_tile_behavior">Settings Tile Behavior</string>
    <string name="checkin_information">Check In Information</string>
    <string name="reset_checkin_information">Reset Check In Information</string>
    <string name="reset_cookie_explanation">Clears your NRIC and contact number</string>

    <string name="tile_behavior_scanner">tile_scanner</string>
    <string name="tile_behavior_checkout">tile_checkout</string>

</resources>
