<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.preference.PreferenceCategory
      android:title="@string/settings_tile">

    <androidx.preference.ListPreference
        android:key="@string/settings_tile_behavior"
        android:persistent="true"
        android:title="@string/settings_tile_behavior"/>

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
      android:title="@string/checkin_information">

    <Preference
      app:key="@string/reset_checkin_information"
      app:title="@string/reset_checkin_information"
      app:summary="@string/reset_cookie_explanation"/>

  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
